src/objects/Tax_Breakup__c.object
<CustomObject>
    <description>Break up of the individual tax slabs into KKC, SBC etc.,</description>
    <fields>
        <fullName>Effective_Till__c</fullName>
        <label>Effective Till</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_from__c</fullName>
        <label>Effective from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tax_Code__c</fullName>
        <label>Tax Code</label>
        <picklist>
            <picklistValues>
                <fullName>TDCBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDCBF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ST3FP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S37FP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBFB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBSB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VT1FP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KKCFB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPKFA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STIWP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPKIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBCI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSBGC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STPGC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STKGC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S12MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPKMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBCM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPKWC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSBCW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STPWC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPKSL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBCSL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STLCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPKSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STSBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STPCM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMKKC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMSBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMST</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tax_Name__c</fullName>
        <label>Tax Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Percentage__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tax Percentage</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tax_Percentage_on_100__c</fullName>
        <formula>Taxable_Percentage__c * Tax_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Percentage (on 100%)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tax_Slab__c</fullName>
        <label>Tax Slab</label>
        <referenceTo>Tax_Slab__c</referenceTo>
        <relationshipLabel>Tax Breakup</relationshipLabel>
        <relationshipName>Tax_Breakup</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tax_Split_Type__c</fullName>
        <label>Tax Split Type</label>
        <picklist>
            <picklistValues>
                <fullName>KKC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CGST</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tax_Type__c</fullName>
        <label>Tax Type</label>
        <picklist>
            <picklistValues>
                <fullName>Income Tax - TDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Tax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAT</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Taxable_Percentage__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Taxable Percentage</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <label>Tax Breakup</label>
    <nameField>
        <displayFormat>TXB-{00000}</displayFormat>
        <label>Tax Breakup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Breakup</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>